# axum-htmx

./: .gitignore  Cargo.toml  README.md  justfile  package.json  pnpm-lock.yaml
app/: Cargo.toml
app/src/: filters.rs  main.rs  todos.rs
src/: main.rs  todos.rs
templates/: base.html  index.html  todo-count.html  todo.html  todos.html
tester/: Cargo.toml
tester/src/: lib.rs
