[package]
name = "tester"
version = "1.0.0"
edition = "2021"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bytes = "1.7.1"
http = "1.0.0"
http-body = "1.0.0"
tower = { version = "0.5.0", default-features = false, features = ["util"] }
tower-layer = "0.3.3"
tower-service = "0.3.3"
reqwest = { version = "0.11.14", default-features = false, features = [
  "json",
  "stream",
  "multipart",
] }
